[project]
name = "rag-chatbot-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.11.0",
    "unstructured[pdf]>=0.22.27",
    "onnxruntime<1.26.0",
]
